@@ -19,6 +19,7 @@
             Bangle.js: Support for v2.1 HRM hardware (VC31 vs VC31B)
             Bangle.js: Better HRM detection (higher res filtering, better peak detection, lower median filter size, better confidence)
             Fix E.decodeUTF8 when decoding UTF8 codes that contain all decimal digits
+            Fix for potential buffer overrun if JSON.stringify used with strangely crafted whitespace arg (fix #2114)
 
      2v11 : Bangle.js: Enable the Bangle.on('tap') event from the accelerometer by default
             Bangle.js: revert to (better) Kionix default thresholds for tap detect
